--- a/Simple-Project/ansible-playbook.yml
+++ b/Simple-Project/ansible-playbook.yml
@@ -20,6 +20,7 @@
 
     - name: Push Image to dockerhub
       command: docker push triple3a/comingsoon-page
+      ignore_errors: yes
 
     - name: run container
       command: docker run -d --name web-container -p 5000:80 triple3a/comingsoon-page
