--- a/Simple-Project/ansible-playbook.yml
+++ b/Simple-Project/ansible-playbook.yml
@@ -19,7 +19,7 @@
       command: docker build -t triple3a/comingsoon-page .
 
     - name: Push Image to dockerhub
-      command: docker push triple3a/comingsoon-page
+      command: docker push abdosheham12/abdoshheam:triple3a/comingsoon-page
       ignore_errors: yes
 
     - name: run container
