--- a/Simple-Project/ansible-playbook.yml
+++ b/Simple-Project/ansible-playbook.yml
@@ -12,16 +12,16 @@
       ignore_errors: yes
 
     - name: remove comingsoon-image
-      command: docker rmi triple3a/comingsoon-page
+      command: docker rmi abdosheham/comingsoon-page
       ignore_errors: yes
 
     - name: build docker image using the Dockerfile
-      command: docker build -t triple3a/comingsoon-page .
+      command: docker build -t abdosheham12/comingsoon-page .
 
     - name: Push Image to dockerhub
-      command: docker push abdosheham12/abdoshheam:triple3a/comingsoon-page
+      command: docker push abdosheham12/comingsoon-page
       ignore_errors: yes
 
     - name: run container
-      command: docker run -d --name web-container -p 5000:80 triple3a/comingsoon-page
+      command: docker run -d --name web-container -p 5000:80 push abdosheham12/comingsoon-page
 
