--- a/Simple-Project/ansible-playbook.yml
+++ b/Simple-Project/ansible-playbook.yml
@@ -23,5 +23,5 @@
       ignore_errors: yes
 
     - name: run container
-      command: docker run -d --name web-container -p 5000:80 push abdosheham12/comingsoon-page
+      command: docker run -d --name web-container -p 5000:80 abdosheham12/comingsoon-page
 
