--- a/DevOps-Pipeline-PHP/laravel-app/docker-compose.yml
+++ b/DevOps-Pipeline-PHP/laravel-app/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    image: 'triple3a/laravel-app'
+    image: 'abdosheham12/laravel-app'
     volumes:
       - . /var/www/html/
     ports:
